added job serach functionality

--- a/example.env
+++ b/example.env
@@ -1,2 +1,4 @@
 OPENAI_API_KEY=[PUT YOUR OPENAI API KEY HERE]
 GROQ_API_KEY=[PUT YOUR GROQ API KEY HERE]
+RAPIDAPI_KEY=[PUT YOUR RAPIDAPI KEY HERE]
+RAPIDAPI_HOST=[PUT YOUR RAPIDAPI HOST HERE]
