chore: Enable job search functionality and fix typo in code. Added resume and cover letter templates.

--- a/example.env
+++ b/example.env
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=[PUT YOUR OPENAI API KEY HERE]
 GROQ_API_KEY=[PUT YOUR GROQ API KEY HERE]
+GROQ_MODEL_NAME=[PUT YOUR GROQ MODEL NAME HERE]
 RAPIDAPI_KEY=[PUT YOUR RAPIDAPI KEY HERE]
 RAPIDAPI_HOST=[PUT YOUR RAPIDAPI HOST HERE]
